<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/nav_home"
            android:title="@string/home" />
        <item
            android:id="@+id/nav_pendapps"
            android:checkable="false"
            android:icon="@drawable/nav_apps"
            android:title="@string/pending_appointments" />
        <item
            android:id="@+id/nav_pathis"
            android:checkable="false"
            android:icon="@drawable/history"
            android:title="@string/patient_history" />
        <item
            android:id="@+id/nav_settings"
            android:checkable="false"
            android:icon="@drawable/settings1"
            android:title="@string/settings" />
        <item
            android:id="@+id/nav_aboutus"
            android:checkable="false"
            android:icon="@drawable/about_us"
            android:title="@string/about_us" />
    </group>

    <item android:title="@string/communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/share" />
            <item
                android:id="@+id/nav_feedback"
                android:icon="@drawable/nav_feedback"
                android:title="@string/feedback" />
        </menu>
    </item>



</menu>
